bugfix: invisible minimized drag containers still clickable

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -250,7 +250,11 @@ body:before, body:after {
 
 	&.invisible {
 		opacity: 0;
-		pointer-events: none;
+		pointer-events: none !important;
+
+		* {
+			pointer-events: none !important;
+		}
 	}
 
 	&.focused {
